--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Lord of the Rings Portfolio - Thiago é o cara !</title>
+    <title>Lord of the Rings Portfolio</title>
 </head>
 <body>
 
